<resources>
    <string name="app_name">OUPA Asistente</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_pillbox">PillboxActivity</string>
    <string name="today_pills_title">Medicamentos de hoy</string>
    <string name="add_new_pill">Agregar</string>
    <string name="new_pill_title">Nuevo medicamento</string>
    <string name="save_button">Guardar</string>
    <string name="title_activity_new_pill_step1">Nuevo Medicamento</string>
    <string name="title_activity_new_pill_step4">NewPillStep4</string>
    <string name="select_hour">Seleccionar Fecha y Hora</string>
    <string name="selected_date">Fecha y hora seleccionada</string>
    <string name="new_pill_name">Nombre:</string>
    <string name="add_pill_description">Se agregó la pastilla</string>
    <string name="back_button">Volver</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Continuar</string>
    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>

    <!-- Measurementts -->
    <string name="title_activity_measurement_list">MeasurementListActivity</string>
    <string name="title_activity_new_measurement_step1">NewMeasurementStep1</string>
    <string name="title_activity_new_measurement_step2">NewMeasurementStep2</string>

    <string name="title_measurement_step1">Tipo de medición</string>
    <string name="measurement_type_temperature">Temperatura</string>
    <string name="measurement_type_glucose">Glucosa</string>
    <string name="measurement_type_preasure">Presión</string>
    <string name="title_measurement_step2">Resultado obtenido:</string>

    <string name="measurement_list_title">Mediciones</string>

</resources>
